qip
